--- a/scss/all.scss
+++ b/scss/all.scss
@@ -3,5 +3,11 @@ body {
 }
 
 .main {
-    min-height: calc(100vh - (49px + 49px + 42px + 14px))
+    min-height: calc(100vh - (49px + 49px + 42px + 14px));
+}
+
+@media (max-width: 576px) {
+    .d-none {
+        display: block!important;
+    }
 }
